<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2025 kenway214
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="game_bar_enable"
        android:title="@string/enable_gamebar_overlay"
        android:defaultValue="false" />

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_overlay_features"
        android:title="@string/category_overlay_features"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_fps_enable"
            android:title="@string/fps_overlay"
            android:summary="@string/fps_overlay_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_fps_display_mode"
            android:title="@string/fps_display_mode"
            android:summary="@string/fps_display_mode_summary"
            android:entries="@array/fps_display_mode_entries"
            android:entryValues="@array/fps_display_mode_values"
            android:defaultValue="basic" />

        <SwitchPreferenceCompat
            android:key="game_bar_frame_time_enable"
            android:title="@string/frame_time"
            android:summary="@string/frame_time_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_temp_enable"
            android:title="@string/device_temperature"
            android:summary="@string/device_temperature_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_usage_enable"
            android:title="@string/cpu_usage"
            android:summary="@string/cpu_usage_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_clock_enable"
            android:title="@string/cpu_clock_speeds"
            android:summary="@string/cpu_clock_speeds_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_cpu_temp_enable"
            android:title="@string/cpu_temperature"
            android:summary="@string/cpu_temperature_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_enable"
            android:title="@string/ram_usage"
            android:summary="@string/ram_usage_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_speed_enable"
            android:title="@string/ram_frequency"
            android:summary="@string/ram_frequency_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_ram_temp_enable"
            android:title="@string/ram_temperature"
            android:summary="@string/ram_temperature_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_usage_enable"
            android:title="@string/gpu_usage"
            android:summary="@string/gpu_usage_summary"
            android:defaultValue="true" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_clock_enable"
            android:title="@string/gpu_clock_speed"
            android:summary="@string/gpu_clock_speed_summary"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:key="game_bar_gpu_temp_enable"
            android:title="@string/gpu_temperature"
            android:summary="@string/gpu_temperature_summary"
            android:defaultValue="false" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_fps_method"
        android:title="@string/category_fps_method"
        android:dependency="game_bar_fps_enable">
        <ListPreference
            android:key="game_bar_fps_method"
            android:title="@string/select_fps_method"
            android:summary="@string/select_fps_method_summary"
            android:defaultValue="new"
            android:entries="@array/game_bar_fps_method_entries"
            android:entryValues="@array/game_bar_fps_method_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_customization"
        android:title="@string/category_customization"
        android:dependency="game_bar_enable">

        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_text_size"
            android:title="@string/text_size"
            android:summary="@string/text_size_summary"
            android:defaultValue="12"
            android:max="50"
            android:min="5"
            settings:units="" />
        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_background_alpha"
            android:title="@string/background_transparency"
            android:summary="@string/background_transparency_summary"
            android:defaultValue="95"
            android:max="255"
            android:min="0"
            settings:units="" />

        <com.android.gamebar.colorpicker.ColorPreferenceCompat
            android:key="game_bar_background_color"
            android:title="@string/overlay_background_color"
            android:summary="@string/overlay_background_color_summary"
            android:defaultValue="0xFF000000"
            app:gamebar_dialogType="custom"
            app:gamebar_showAlphaSlider="true"
            app:gamebar_colorShape="circle"
            app:gamebar_showColorShades="true"
            app:gamebar_allowPresets="true"
            app:gamebar_allowCustom="true"
            app:gamebar_colorPresets="@array/fps_overlay_color_int_values" />

        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_corner_radius"
            android:title="@string/overlay_corner_radius"
            android:summary="@string/overlay_corner_radius_summary"
            android:defaultValue="100"
            android:max="100"
            android:min="0"
            settings:units="" />
        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_padding"
            android:title="@string/overlay_padding"
            android:summary="@string/overlay_padding_summary"
            android:defaultValue="4"
            android:max="64"
            android:min="0"
            settings:units="" />

        <com.android.gamebar.utils.PartsCustomSeekBarPreference
            android:key="game_bar_item_spacing"
            android:title="@string/item_spacing"
            android:summary="@string/item_spacing_summary"
            android:defaultValue="8"
            android:max="50"
            android:min="0"
            settings:units="" />

        <ListPreference
            android:key="game_bar_update_interval"
            android:title="@string/update_interval"
            android:summary="@string/update_interval_summary"
            android:defaultValue="1000"
            android:entries="@array/fps_overlay_update_interval_entries"
            android:entryValues="@array/fps_overlay_update_interval_values" />

        <com.android.gamebar.colorpicker.ColorPreferenceCompat
            android:key="game_bar_title_color"
            android:title="@string/stat_title_color"
            android:summary="@string/stat_title_color_summary"
            android:defaultValue="@color/gamebar_default_title_color"
            app:gamebar_dialogType="custom"
            app:gamebar_showAlphaSlider="false"
            app:gamebar_colorShape="circle"
            app:gamebar_showColorShades="true"
            app:gamebar_allowPresets="true"
            app:gamebar_allowCustom="true"
            app:gamebar_colorPresets="@array/fps_overlay_color_int_values" />

        <com.android.gamebar.colorpicker.ColorPreferenceCompat
            android:key="game_bar_value_color"
            android:title="@string/stat_value_color"
            android:summary="@string/stat_value_color_summary"
            android:defaultValue="@color/gamebar_default_value_color"
            app:gamebar_dialogType="custom"
            app:gamebar_showAlphaSlider="false"
            app:gamebar_colorShape="circle"
            app:gamebar_showColorShades="true"
            app:gamebar_allowPresets="true"
            app:gamebar_allowCustom="true"
            app:gamebar_colorPresets="@array/fps_overlay_color_int_values" />

        <Preference
            android:key="game_bar_font_selector"
            android:title="@string/overlay_font_style"
            android:summary="@string/overlay_font_style_summary" />

        <ListPreference
            android:key="game_bar_position"
            android:title="@string/overlay_position"
            android:summary="@string/overlay_position_summary"
            android:defaultValue="draggable"
            android:entries="@array/fps_overlay_position_entries"
            android:entryValues="@array/fps_overlay_position_values" />

        <ListPreference
            android:key="game_bar_format"
            android:title="@string/overlay_format"
            android:summary="@string/overlay_format_summary"
            android:defaultValue="full"
            android:entries="@array/game_bar_format_entries"
            android:entryValues="@array/game_bar_format_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_split_config"
        android:title="@string/category_split_config"
        android:dependency="game_bar_enable">

        <ListPreference
            android:key="game_bar_split_mode"
            android:title="@string/split_mode"
            android:summary="@string/split_mode_summary"
            android:defaultValue="side_by_side"
            android:entries="@array/game_bar_split_mode_entries"
            android:entryValues="@array/game_bar_split_mode_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_gesture_controls"
        android:title="@string/category_gesture_controls"
        android:dependency="game_bar_enable">

        <SwitchPreferenceCompat
            android:key="game_bar_single_tap_enable"
            android:title="@string/enable_single_tap_toggle"
            android:summary="@string/enable_single_tap_toggle_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_single_tap_function"
            android:title="@string/single_tap_function"
            android:summary="@string/single_tap_function_summary"
            android:entries="@array/gesture_function_entries"
            android:entryValues="@array/gesture_function_values"
            android:defaultValue="toggle_format" />

        <SwitchPreferenceCompat
            android:key="game_bar_doubletap_enable"
            android:title="@string/enable_double_tap_capture"
            android:summary="@string/enable_double_tap_capture_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_doubletap_function"
            android:title="@string/double_tap_function"
            android:summary="@string/double_tap_function_summary"
            android:entries="@array/gesture_function_entries"
            android:entryValues="@array/gesture_function_values"
            android:defaultValue="capture_logs" />

        <SwitchPreferenceCompat
            android:key="game_bar_longpress_enable"
            android:title="@string/enable_long_press"
            android:summary="@string/enable_long_press_summary"
            android:defaultValue="true" />

        <ListPreference
            android:key="game_bar_longpress_function"
            android:title="@string/long_press_function"
            android:summary="@string/long_press_function_summary"
            android:entries="@array/gesture_function_entries"
            android:entryValues="@array/gesture_function_values"
            android:defaultValue="open_settings" />

        <ListPreference
            android:key="game_bar_longpress_timeout"
            android:title="@string/long_press_duration"
            android:summary="@string/long_press_duration_summary"
            android:defaultValue="500"
            android:entries="@array/game_bar_longpress_entries"
            android:entryValues="@array/game_bar_longpress_values" />
    </com.android.gamebar.ExpandablePreferenceCategory>

    <com.android.gamebar.ExpandablePreferenceCategory
        android:key="category_per_app"
        android:title="@string/category_per_app">

        <SwitchPreferenceCompat
            android:key="game_bar_auto_enable"
            android:title="@string/auto_enable_gamebar"
            android:summary="@string/auto_enable_gamebar_summary"
            android:defaultValue="false" />

        <Preference
            android:key="game_bar_per_app_config"
            android:title="@string/configure_apps"
            android:summary="@string/configure_apps_summary" />
    </com.android.gamebar.ExpandablePreferenceCategory>

</PreferenceScreen>
